# CLASSROOM

./: ALPHABET SERIES.c  CMakeLists.txt  Check leap year using function.c  DAY OF WEEK - SWITCH.c  Digit or Character.c  Even numbers within a specific range.c  Fibonacci.c  GREATEST NUMBER USING FUNCTION.c  MY BESTO FRIENDO using function.c  Multipication table.c  Number of digits in a number.c  Palindrome.c  Pyramid.c  Recursive.c  SUM OF N NUMBERS USING FUNCTION.c  Student info.c  VOWEL OR CONSONANT.c  ami  amicable  amicable.c  armstrong number.c  bubble sorting.c  capture elements of array from user.c  decimal to binary.c  discount.c  factorials using function.c  hello world without loop.c  pass 1- 12345.c  practice 1 (pattern).c  practice 2(pallindrome).c  pyramid  r1.c  recursive example.c  sum of n numbers using recursive.c  swapping numbers using function.c  traversal.c  uppercase lower case.c
