cmake_minimum_required(VERSION 3.26)
project(CLASSROOM C)

set(CMAKE_C_STANDARD 11)

add_executable(CLASSROOM
      #  "DAY OF WEEK - SWITCH.c"
        #"Even numbers within a specific range.c"
       # "VOWEL OR CONSONANT.c"
       # "pass 1- 12345.c"
       # "discount.c"
       # "Multipication table.c"
       # "Digit or Character.c"
        "Fibonacci.c")
