cmake_minimum_required(VERSION 3.26)
project(CLASSROOM C)

set(CMAKE_C_STANDARD 11)

add_executable(CLASSROOM
      #  "DAY OF WEEK - SWITCH.c"
        #"Even numbers within a specific range.c"
       # "VOWEL OR CONSONANT.c"
       # "pass 1- 12345.c"
       # "discount.c"
       # "Multipication table.c"
       # "Digit or Character.c"
       # "Fibonacci.c"
        #"ALPHABET SERIES.c"
        #"Palindrome.c"
        #"hello world without loop.c"
        #"Pyramid.c"
       # "Number of digits in a number.c"
        #"swapping numbers using function.c"
       # "GREATEST NUMBER USING FUNCTION.c"
        #"SUM OF N NUMBERS USING FUNCTION.c"
        #"Check leap year using function.c"
      #  "MY BESTO FRIENDO using function.c"
        "factorials using function.c")
